--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
-.one {
-    background-color: aquamarine;
-    color: #0f0f0f;
+.table_content {
+    background-image: linear-gradient(to right, rgb(236, 226, 226), rgb(226, 137, 2));
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th,
+td {
+    text-align: center;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2
+}
+
+th {
+    background-color: #ce8526;
+    color: white;
 }
