--- a/style.css
+++ b/style.css
@@ -5,7 +5,17 @@
 .login {
     background-color: black;
     color: blanchedalmond;
+    width: 100vw;
+    height: 100vh;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.field {
+    padding-top: 40vh;
 }
 
 .filters {
