--- a/login.css
+++ b/login.css
@@ -1,7 +1,33 @@
 /* Bordered form */
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+}
+
+body,
+html {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    padding: 4vh;
+    background-image: linear-gradient(to bottom right, rgb(35, 12, 12), rgb(215, 240, 255));
+    /* Full height */
+    height: 100%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 form {
     border: 3px solid #f1f1f1;
+    background-color: rgb(67, 203, 210);
+    border-radius: 15px;
+    width: 50vw;
+    margin: auto;
 }
 
 
@@ -21,7 +47,8 @@ input[type=password] {
 /* Set a style for all buttons */
 
 button {
-    background-color: #4CAF50;
+    background-color: #4c77af;
+    border-radius: 15px;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -58,7 +85,7 @@ button:hover {
 /* Avatar image */
 
 svg {
-    width: 100px;
+    width: 10vw;
 }
 
 
@@ -66,6 +93,7 @@ svg {
 
 .container {
     padding: 16px;
+    border-radius: 0 0 5px 5px;
 }
 
 
@@ -79,12 +107,18 @@ span.psw {
 
 /* Change styles for span and cancel button on extra small screens */
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 600px) {
     span.psw {
         display: block;
         float: none;
     }
     .cancelbtn {
         width: 100%;
+    }
+    form {
+        width: 100%;
+    }
+    svg {
+        width: 20vw;
     }
 }
