--- a/AnimationFromMykola(Just for fun)/style_rotation.css
+++ b/AnimationFromMykola(Just for fun)/style_rotation.css
@@ -27,8 +27,10 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    width: 100vw;
     display: flex;
-    /* justify-content: space-evenly; */
+    justify-content: space-evenly;
+    justify-items: stretch;
 }
 
 #symbols2 {
@@ -36,6 +38,7 @@ body {
     top: 20;
     left: 0;
     display: flex;
+    width: 100vw;
     justify-content: space-evenly;
 }
 
@@ -44,6 +47,7 @@ body {
     top: 0;
     left: 0;
     display: flex;
+    width: 100vw;
     justify-content: space-evenly;
 }
 
@@ -51,12 +55,14 @@ body {
     position: absolute;
     text-align: center;
     display: flex;
+    width: 100vw;
     justify-content: space-evenly;
 }
 
 #symbols5 {
     position: absolute;
     display: flex;
+    width: 100vw;
     justify-content: space-evenly;
 }
 
@@ -98,17 +104,18 @@ body {
 
 .gears {}
 
-.gears svg {
+.gears #one {
     width: 100px;
     height: 100px;
     /* border: 1px solid red; */
     animation: example linear 2s infinite;
     animation-duration: 3s;
     animation-iteration-count: infinite;
+    animation-direction: normal;
     /* animation-direction: alternate; */
 }
 
-.gear_two svg {
+.gear_two #two {
     width: 100px;
     height: 100px;
     animation: example linear 2s infinite;
@@ -116,17 +123,22 @@ body {
     animation-direction: reverse;
 }
 
-.gear_three svg {
+.gear_three #three {
     width: 300px;
     height: 300px;
     animation: example linear 2s infinite;
     animation-duration: 6s;
+    fill: rgb(185, 247, 185);
     /* animation-direction: reverse; */
+}
+
+.gear_three svg:hover {
+    fill: rgb(78, 163, 205);
 }
 
 @keyframes example {
     from {
-        fill: rgb(84, 164, 190);
+        /* fill: rgb(84, 164, 190); */
         /* width: 100px;
         height: 100px; */
         -webkit-transform: rotate(0deg);
@@ -134,7 +146,7 @@ body {
         transform: rotate(0deg);
     }
     to {
-        fill: rgb(92, 196, 223);
+        /* fill: rgb(92, 196, 223); */
         /* width: 120px;
         height: 120px; */
         -webkit-transform: rotate(360deg);
@@ -145,7 +157,7 @@ body {
 
 @keyframes title_move {
     from {
-        fill: rgb(155, 170, 174);
+        /* fill: rgb(155, 170, 174); */
         /* width: 100px;
     height: 100px; */
         /* -webkit-transform: rotate(0deg);
@@ -153,7 +165,7 @@ body {
     transform: rotate(0deg); */
     }
     to {
-        fill: rgb(16, 194, 239);
+        /* fill: rgb(16, 194, 239); */
         transform: translate(50%, 0);
         /* width: 120px;
     height: 120px; */
