--- a/AnimationFromMykola(Just for fun)/style_rotation.css
+++ b/AnimationFromMykola(Just for fun)/style_rotation.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 span {
@@ -100,6 +101,7 @@ body {
     width: fit-content;
     border-radius: 15px;
     box-shadow: 1px 8px 10px 6px rgb(141, 216, 241);
+    z-index: 1;
 }
 
 .gears {}
